# QuinticSpline

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  README.tex.md  a.out  main.cpp  quinticSpline.cpp  quinticSpline.hpp
examples/: 00.cpp  01.cpp  plot.cpp
resources/: Makefile  cmake_install.cmake  example00  example01  plot.ipynb  plot_example01.ipynb  plot_example01.nb
resources/.ipynb_checkpoints/: plot-checkpoint.ipynb  plot_example00-checkpoint.ipynb  plot_example01-checkpoint.ipynb
src/: quinticSpline.cpp  quinticSpline.hpp
test/: test1.cpp  test2.cpp
